AWS/CloudFormation/EC2Instance.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: CloudFormation Template to create an EC2 instance 

Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: 'AWS::EC2::KeyPair::KeyName'
    ConstraintDescription: must be the name of an existing EC2 KeyPair.

Resources:
  WebAppInstance:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: t2.micro
      KeyName: !Ref KeyName
      ImageId: ami-0c55b159cbfafe1f0  # Amazon Linux 2 AMI
      SecurityGroups:
        - !Ref WebAppSecurityGroup
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          yum install -y httpd
          systemctl start httpd
          systemctl enable httpd
          echo "<html><h1>Welcome to the Web App</h1></html>" > /var/www/html/index.html

  WebAppSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties: 
      GroupDescription: Enable HTTP access via port 80
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0  # Allow SSH access (you may want to restrict this)
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0  # Allow HTTP access from the internet

Outputs:
  InstancePublicIP:
    Description: Public IP address of the web app instance
    Value: !GetAtt WebAppInstance.PublicIp
  WebsiteURL:
    Description: URL of the web app
    Value: !Sub "http://${WebAppInstance.PublicIp}"
